package tasks.task_1;

public interface Expression {
    boolean interpret(String context);
}
