@startuml

title __TASK_1's Class Diagram__\n

  namespace tasks.task_1 {
    class tasks.task_1.AndExpression {
        + AndExpression()
        + interpret()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.ComparisonExpression {
        ~ left : int
        ~ right : int
        + ComparisonExpression()
        + interpret()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.CompoundExpression {
        ~ left : int
        ~ right : int
        + CompoundExpression()
        + interpret()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.ContainsExpression {
        - data : String
        + ContainsExpression()
        + interpret()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.EqualsExpression {
        ~ data : String
        + EqualsExpression()
        + interpret()
    }
  }
  

  namespace tasks.task_1 {
    interface tasks.task_1.Expression {
        {abstract} + interpret()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.Main {
        {static} + main()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.NegationExpression {
        ~ data : String
        + NegationExpression()
        + interpret()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.OrExpression {
        + OrExpression()
        + interpret()
    }
  }
  

  tasks.task_1.AndExpression .up.|> tasks.task_1.Expression
  tasks.task_1.AndExpression o-- tasks.task_1.Expression : left
  tasks.task_1.AndExpression o-- tasks.task_1.Expression : right
  tasks.task_1.ComparisonExpression .up.|> tasks.task_1.Expression
  tasks.task_1.CompoundExpression .up.|> tasks.task_1.Expression
  tasks.task_1.ContainsExpression .up.|> tasks.task_1.Expression
  tasks.task_1.EqualsExpression .up.|> tasks.task_1.Expression
  tasks.task_1.NegationExpression .up.|> tasks.task_1.Expression
  tasks.task_1.OrExpression .up.|> tasks.task_1.Expression
  tasks.task_1.OrExpression o-- tasks.task_1.Expression : left
  tasks.task_1.OrExpression o-- tasks.task_1.Expression : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
